# mockingbird

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: config.yaml
examples/common/: macros.hpp
examples/mocking/: mocking.yaml
examples/mocking/templates/: IWin32Api.hpp  MockWin32Api.cpp  MockWin32Api.hpp  Win32Api.cpp  Win32Api.hpp
src/: args.rs  config.rs  constants.rs  main.rs  wrappers.rs
