[package]
name = "mockingbird"
version = "0.1.0"
edition = "2024"
authors = ["Jonas Zaddach <jonas.zaddach@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
tempfile = "3.23.0"
tera = "1.20.0"
windows-metadata = "0.59.0"
zip = "6.0.0"
